# refactor-test-suite

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .travis.yml  AddParameter.cpp  AddParameter.h  AddRemoveBlockDelimiter.cpp  BooleanToEnum.h  BugReport.bat  CLionResults.txt  CMakeLists.txt  CMakePresets.json  CollapseExpandAccessors.cpp  CombineConditionals.cpp  Contributing.md  Cpp11MigrateResults.txt  CreateMethodContract.cpp  CreateMethodStub.cpp  CreateOverload.cpp  CreateOverload.h  CreateSplitMultiVariableDeclaration.cpp  DecomposeParameter.cpp  DecomposeParameter.h  EncapsulateDowncast.cpp  ExtractInterface.cpp  ExtractMethod.cpp  FlattenConditional.cpp  InlineMacro.cpp  InlineRecentAssignment.cpp  InlineResult.cpp  InlineTemporary.cpp  IntroduceAlias.cpp  IntroduceLocal.cpp  IntroduceParameterObject.cpp  MoveDeclarationNearReference.cpp  MoveTypeToFile.cpp  MoveTypeToNamespace.cpp  OptimizeNamespaceReferences.cpp  (+19 more)
.github/workflows/: cmake.yml
RefactorTest/: AddBlockDelimiter.cpp  AddOverride.cpp  AddParameter.cpp  AddParameter.h  AddRemoveBlockDelimiter.cpp  BooleanToEnum.cpp  BooleanToEnum.h  BreakApartLineUpParameters.cpp  CMakeLists.txt  ChangeSignature.cpp  ChangeSignature.h  CollapseExpandAccessors.cpp  CombineConditionals.cpp  CompressToExpandFromTernaryExpression.cpp  ConditionalToCase.cpp  Config.h.in  CreateMethodContract.cpp  CreateMethodStub.cpp  CreateMultiVariableDeclaration.cpp  CreateOverload.cpp  CreateOverload.h  CreateSetterMethod.cpp  CreateSetterMethod.h  CreateSplitMultiVariableDeclaration.cpp  DecomposeParameter.cpp  DecomposeParameter.h  EncapsulateDowncast.cpp  EncapsulateField.cpp  ExtractConstant.cpp  ExtractFunction.cpp  ExtractFunction2.cpp  ExtractInterface.cpp  ExtractMethod.cpp  ExtractParameter.cpp  ExtractVariable.cpp  FlattenConditional.cpp  InlineMacro.cpp  InlineRecentAssignment.cpp  InlineResult.cpp  InlineTemporary.cpp  (+72 more)
TestCases/: CMakeLists.txt  TestCases.cpp  TestCases.h  ToolResults.cpp  ToolResults.h
TestDiffs/: CMakeLists.txt  TestDiffs.cpp  main.cpp
TestNames/: CMakeLists.txt  TestNames.cpp  main.cpp
TestResults/: TestResults.cpp
ToolSummary/: CMakeLists.txt  ToolSummary.cpp
Tools/: CMakeLists.txt
Tools/AddTestAlias/: AddTestAlias.cpp  CMakeLists.txt
Tools/AddTests/: AddTests.cpp  CMakeLists.txt
Tools/DeleteTests/: CMakeLists.txt  DeleteTests.cpp
Tools/DropComments/: CMakeLists.txt  DropComments.cpp
Tools/RenumberTests/: CMakeLists.txt  RenumberTests.cpp
Tools/TestCases/: CMakeLists.txt  FileContents.cpp  FileContents.h  IntList.cpp  IntList.h  Main.cpp  Main.h  StringScanner.h  TestCases.cpp  TestCases.h  Tool.cpp  Tool.h  ToolResults.cpp  ToolResults.h
Tools/TestDiffs/: TestDiffs.cpp
Tools/TestNames/: TestNames.cpp
Tools/TestResults/: CMakeLists.txt  TestResults.cpp
Tools/Tests/: CMakeLists.txt  TestAddTests.cmake  TestTool.cmake
Tools/Tests/Inputs/Results/diffs/: R4.txt  R5.txt
Tools/Tests/add-test-alias/Expected/Results/diffs/: R4.txt  R5.txt
Tools/Tests/add-test-alias/Expected/Sources/: TestRename.cpp
Tools/Tests/add-test-alias/Inputs/Results/diffs/: R1.txt  R2.txt  R4.txt
Tools/Tests/add-test-alias/Inputs/Sources/: TestRename.cpp
Tools/Tests/add-tests/Expected/Results/: CLionResults.md
Tools/Tests/add-tests/Expected/Results/diffs/: R6.txt
Tools/Tests/add-tests/Expected/Sources/: TestRename.cpp
Tools/Tests/add-tests/Inputs/Results/: CLionResults.md  ReSharperCppResults.md
Tools/Tests/add-tests/Inputs/Results/diffs/: R3.txt
Tools/Tests/add-tests/Inputs/Sources/: TestRename.cpp
Tools/Tests/delete-tests/Expected/Results/: CLionResults.md  ReSharperCppResults.md
Tools/Tests/delete-tests/Expected/Results/diffs/: R3.txt  R5.txt  R6.txt
Tools/Tests/delete-tests/Expected/Sources/: TestRename.cpp
Tools/Tests/delete-tests/Inputs/Results/: CLionResults.md  ReSharperCppResults.md
Tools/Tests/delete-tests/Inputs/Results/diffs/: R1.txt  R2.txt  R5.txt  R6.txt  R7.txt
Tools/Tests/delete-tests/Inputs/Sources/: TestRename.cpp
Tools/Tests/renumber-tests/Expected/Results/: CLionResults.md  ReSharperCppResults.md
Tools/Tests/renumber-tests/Expected/Results/diffs/: R1.txt  R5.txt  R6.txt  R7.txt
Tools/Tests/renumber-tests/Inputs/Results/: ReSharperCppResults.md
Tools/Tests/renumber-tests/Inputs/Results/diffs/: R1.txt  R6.txt
Tools/Tests/renumber-tests/Inputs/Sources/: TestRename.cpp
Tools/ToolSummary/: ToolSummary.cpp
results/: .editorconfig  AllResults.js  AppleXcodeResults.md  CLionResults.md  CLionResults.txt  CMakeLists.txt  ClangModernizeResults.md  ClangTidyResults.md  Cpp11MigrateResults.txt  EclipseCDTResults.md  JsonResults.js  QtCreatorResults.md  ReSharperCpp.md  ReSharperCppResults.md  RefactorProResults.md  RefactorProResults.txt  Results.njsproj  Results.sln  TestResults.js  VisualAssistXResults.md  VisualAssistXResults.txt  VisualStudio2015Results.md  VisualStudio2017Results.md  VisualStudioResults.md  changes.txt  extractCases.sh  package.json
results/annotated/: CLionResults.md  ClangTidyResults.md  ReSharperCppResults.md  VisualAssistXResults.md  VisualStudioResults.md
results/diffs/: ABD1.txt  ABD2.txt  ABD3.txt  ABD4.txt  ABD5.txt  ABD6.txt  ABD7.txt  AO1.txt  AO10.txt  AO11.txt  AO12.txt  AO13.txt  AO14.txt  AO15.txt  AO16.txt  AO2.txt  AO3.txt  AO4.txt  AO5.txt  AO6.txt  AO7.txt  AO8.txt  AO9.txt  AP1.txt  AP10.txt  AP100.txt  AP101.txt  AP103.txt  AP104.txt  AP105.txt  AP106.txt  AP107.txt  AP108.txt  AP109.txt  AP11.txt  AP110.txt  AP111.txt  AP112.txt  AP113.txt  AP114.txt  (+1839 more)
results/file-diffs/: ABD.txt  AO.txt  RAW.txt  RAWU.txt  RIRF.txt  RTWA.txt  RZNP.txt  SB.txt
results/preliminary/: AppleXcodeResults.md  CMakeLists.txt  EclipseCDTResults.md  QtCreatorResults.md
results/preliminary/annotated/: AppleXcodeResults.md  EclipseCDTResults.md  QtCreatorResults.md
results/processor/: AllResults.js  Results.njsproj  package.json
results/scripts/: check-seq.bat  check.bat  copy-diff.bat  file-check.bat  regen-results.bat  regen-summary.bat  restore.bat  run-clang-tidy.bat  update-seq.bat  update.bat
