add_subdirectory(AddTestAlias)
add_subdirectory(AddTests)
add_subdirectory(DeleteTests)
add_subdirectory(DropComments)
add_subdirectory(RenumberTests)
add_subdirectory(TestCases)
add_subdirectory(TestDiffs)
add_subdirectory(TestNames)
add_subdirectory(TestResults)
add_subdirectory(ToolSummary)

if(BUILD_TESTING)
    add_subdirectory(Tests)
endif()
